# vision-lab

./: .dependency-cruiser.cjs  .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  compose.yaml  package-lock.json  package.json
api/: Cargo.toml  README.md
api/crates/: README.md
api/crates/perception_api/: Cargo.toml
api/crates/perception_api/src/: README.md  main.rs
api/crates/perception_app/: Cargo.toml
api/crates/perception_app/src/: error.rs  lib.rs  models.rs
api/crates/perception_app/tests/: add_annotation_use_case.rs  create_dataset_use_case.rs  create_dataset_version_use_case.rs  create_training_job_use_case.rs  dataset_stats_use_case.rs  export_yolo_annotations_use_case.rs  generate_overlay_use_case.rs  import_yolo_annotations_use_case.rs  model_compare_use_case.rs  model_export_use_case.rs  model_promotion_use_case.rs  model_registry_use_case.rs  run_inference_use_case.rs  training_metric_use_case.rs  upload_sample_use_case.rs
api/crates/perception_domain/: Cargo.toml
api/crates/perception_domain/src/: README.md  error.rs  ids.rs  lib.rs  state.rs  value_objects.rs
api/crates/perception_domain/tests/: domain_rules.rs
api/crates/perception_http/: Cargo.toml
api/crates/perception_http/src/: api_key_auth.rs  auth.rs  lib.rs  state.rs
api/crates/perception_http/tests/: annotation_routes.rs  api_key_auth.rs  dataset_routes.rs  dataset_stats_route.rs  dataset_version_routes.rs  health_route.rs  model_routes.rs  sample_routes.rs  training_job_routes.rs  yolo_export_routes.rs  yolo_import_routes.rs
api/crates/perception_infra/: Cargo.toml
api/crates/perception_infra/src/: fake_inference_engine.rs  lib.rs  local_sample_storage.rs  postgres_annotation_repository_sqlx.rs  postgres_dataset_repository_sqlx.rs  postgres_dataset_version_repository_sqlx.rs  postgres_inference_run_repository_sqlx.rs  postgres_model_export_repository_sqlx.rs  postgres_model_repository_sqlx.rs  postgres_sample_repository_sqlx.rs  postgres_training_job_queue_sqlx.rs  postgres_training_job_repository_sqlx.rs  postgres_training_metric_repository_sqlx.rs  repository_backend.rs  svg_overlay_renderer.rs  transient_annotation_repository.rs  transient_dataset_repository.rs  transient_dataset_version_repository.rs  transient_inference_run_repository.rs  transient_model_export_repository.rs  transient_model_repository.rs  transient_sample_repository.rs  transient_training_job_queue.rs  transient_training_job_repository.rs  transient_training_metric_repository.rs  yolo_cli_inference_engine.rs
api/crates/perception_infra/tests/: fake_inference_engine.rs  local_sample_storage.rs  postgres_annotation_repository_sqlx.rs  postgres_dataset_repository_sqlx.rs  postgres_dataset_version_repository_sqlx.rs  postgres_export_inference_repository_sqlx.rs  postgres_metric_model_repository_sqlx.rs  postgres_sample_repository_sqlx.rs  postgres_training_job_repository_sqlx.rs  repository_backend.rs  svg_overlay_renderer.rs  transient_annotation_repository.rs  transient_dataset_repository.rs  transient_dataset_version_repository.rs  transient_inference_run_repository.rs  transient_model_export_repository.rs  transient_model_repository.rs  transient_sample_repository.rs  transient_training_job_queue.rs  (+3 more)
api/migrations/: 0001_initial_schema.sql
doc/: README.md
worker/: README.md  pyproject.toml
worker/perception_worker/: README.md  __init__.py
worker/perception_worker/adapters/: __init__.py
worker/perception_worker/app/: README.md  __init__.py  ingest_dataset.py  process_training_job.py  run_live_webcam_detection.py
worker/perception_worker/contracts/: README.md  __init__.py  dataset_ingestion.py  training_job.py
worker/perception_worker/domain/: README.md  __init__.py  dataset_ingestion.py  real_inference.py  training_result.py  yolo_dataset.py
worker/perception_worker/entrypoints/: README.md  cli.py
worker/perception_worker/ports/: README.md  __init__.py  dataset_ingestion_store.py  dataset_source.py  inference_engine.py  job_repository.py  trainer.py
worker/tests/: test_dataset_ingestion.py  test_dataset_ingestion_cli.py  test_live_webcam_detection.py  test_postgres_job_repository.py  test_real_inference.py  test_real_inference_cli.py  test_tiny_torch_trainer.py  test_training_worker.py  test_worker_package.py  test_yolo_dataset_materializer.py  test_yolo_directory_dataset_source.py  test_yolo_finetune_trainer.py
(+320 files in other folders)
