[workspace]
members = [
  "crates/perception_domain",
  "crates/perception_app",
  "crates/perception_infra",
  "crates/perception_http",
  "crates/perception_api",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "MIT"

[workspace.dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "multipart"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
config = "0.15"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
uuid = { version = "1", features = ["serde", "v7"] }
