[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "perception-worker"
version = "0.1.0"
description = "Typed Python/PyTorch worker for PerceptionLab training, inference, and export jobs."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "datasets>=3,<5",
  "numpy>=2,<3",
  "pillow>=11,<13",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.9,<3",
  "pyyaml>=6,<7",
  "rich>=13,<15",
  "sqlalchemy>=2,<3",
  "structlog>=25,<26",
  "typer>=0.15,<1",
]

[project.optional-dependencies]
ml = [
  "torch>=2.7,<3",
  "torchvision>=0.22,<1",
  "ultralytics>=8.3,<9",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
  "mypy>=1.16,<2",
  "pytest>=8,<10",
  "ruff>=0.12,<1",
]

[project.scripts]
perception-worker = "perception_worker.entrypoints.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["perception_worker"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
