[package]
name = "perception_api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
config.workspace = true
dotenvy.workspace = true
perception_app = { path = "../perception_app" }
perception_domain = { path = "../perception_domain" }
perception_http = { path = "../perception_http" }
perception_infra = { path = "../perception_infra" }
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
