[package]
name = "perception_infra"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
perception_app = { path = "../perception_app" }
perception_domain = { path = "../perception_domain" }
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
